feat: notification, Notify on new message
